--- a/dezincekciya/myhi.html
+++ b/dezincekciya/myhi.html
@@ -21,8 +21,15 @@
     <link rel="stylesheet" href="../css/style_garantiya.css">
     <link rel="stylesheet" href="../css/style_pest-control.css">
     <link rel="stylesheet" href="../css/style_footer.css">
+    <link rel="stylesheet" href="../css/style_scroll_to_up.css">
 </head>
 <body>
+
+    <!-- Кнопка вверх -->
+    <!-- НАЧАЛО -->
+    <a href="#" class="scrollup"><span>&#94;</span></a>
+    <!-- КОНЕЦ -->
+
     <!-- Верхнее меню на странице с названием фирмы и навигацией -->
     <!-- НАЧАЛО -->
     <div class="container-fluid top_black_menu">
@@ -532,7 +539,7 @@
                 </div>
             </div>
         <div class="row_bottom_footer mt-5">
-            <p class="row_bottom_footer__text">© 2021 Уничтожение насекомых и грызунов в квартирах и на загородных участках</p>
+            <p class="row_bottom_footer__text">© 2021 Уничтожение змей, насекомых и грызунов</p>
         </div>
     </footer>
     <!-- КОНЕЦ -->
