--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- НАЧАЛО -->
     <a href="#" class="scrollup"><span>&#94;</span></a>
     <!-- КОНЕЦ -->
-    
+
     <!-- Верхнее меню на странице с названием фирмы и навигацией -->
     <!-- НАЧАЛО -->
     <div class="container-fluid top_black_menu">
@@ -175,7 +175,7 @@
                     <span class="orange_container__text">Гарантированный результат выведения змей</span>
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-12 text-center align-item-center orange_container__button_container">
-                    <a href="#send_form" class="btn btn-light orange_container__button">Подробнее...</a>
+                    <a href="deserpentaciya.html" class="btn btn-light orange_container__button">Подробнее...</a>
                 </div>
             </div>
         </div>
@@ -192,7 +192,7 @@
         <div class="row align-item-center text-center">
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
-                    <a href="deserpentaciya/zmeeloff.html">
+                    <a href="deserpentaciya.html">
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
@@ -200,7 +200,7 @@
                                 </i>
                             </div>
                             <h3 class="one_card__title title_shadow">Змеи</h3>
-                            <p class="one_card__content">Имеют сильно сплющенное сегментированное тельце. Его форма варьируется от округлой до веретенообразной</p>
+                            <p class="one_card__content">Наиболее эффективный метод борьбы со змеями это отлов и химическая защита.</p>
                             <p class="one_card__link">Узнать больше...</p>
                         </div>
                     </a>
@@ -272,7 +272,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
-                    <a href="">
+                    <a href="phymigaciya/wood_home.html">
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
@@ -376,7 +376,7 @@
                                 </i>
                             </div>
                             <h3 class="one_card__title title_shadow">Фумигация</h3>
-                            <p class="one_card__content">Комары являются переносчиками опасных заболеваний: малярии, жёлтой лихорадки, денге и некоторых энцефалитов</p>
+                            <p class="one_card__content">Применяемые нами препараты самые эффективные в области фумигации.</p>
                             <p class="one_card__link">Узнать больше...</p>
                         </div>
                     </a>
@@ -424,7 +424,7 @@
                                 </i>
                             </div>
                             <h3 class="one_card__title title_shadow">Плесень</h3>
-                            <p class="one_card__content">Комары являются переносчиками опасных заболеваний: малярии, жёлтой лихорадки, денге и некоторых энцефалитов</p>
+                            <p class="one_card__content">Полное избавление от плесени.100% результат!</p>
                             <p class="one_card__link">Узнать больше...</p>
                         </div>
                     </a>
@@ -440,7 +440,7 @@
                                 </i>
                             </div>
                             <h3 class="one_card__title title_shadow">Кроты</h3>
-                            <p class="one_card__content">Комары являются переносчиками опасных заболеваний: малярии, жёлтой лихорадки, денге и некоторых энцефалитов</p>
+                            <p class="one_card__content">Живут кроты большими семействами. Если заметили появление крота на участке, скорее принимайте меры.</p>
                             <p class="one_card__link">Узнать больше...</p>
                         </div>
                     </a>
