--- a/for_organization.html
+++ b/for_organization.html
@@ -181,7 +181,7 @@
                                 <span class="first_block__icon">&#10003;</span><span class="first_block__text">Гарантируем конфиденциальность</span>
                             </li>
                         </ol>
-                        <p class="text-center first_block__link"><a href="tel:84993703647">8(499)370-36-47</a> | <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJNqtbnWrnmlTlNjMjcNkRXdjLBxZbMxbxWjdQsMXrLNKQHhLWLnxCcrbJSSCkCKPkHhCXB">info@dezstancya.ru</a></p></div>
+                        <p class="text-center first_block__link"><a href="tel:380503519950">+380503519950</a> | <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJNqtbnWrnmlTlNjMjcNkRXdjLBxZbMxbxWjdQsMXrLNKQHhLWLnxCcrbJSSCkCKPkHhCXB">dezsan.kh@gmail.com</a></p></div>
                 </div>
                 <div class="col-lg-4 col-md-5 first_block__send_form">
                     <p class="send_form__main_text">Желаете задать вопрос?</p>
@@ -296,7 +296,7 @@
                                 </i>
                             </div>
                             <h3 class="one_card__title title_shadow">десерпентация</h3>
-                            <p class="one_card__content">Обработка деревянных строений от всех видов вредителей (взрослых особей и личинок)</p>
+                            <p class="one_card__content">Наиболее эффективный метод борьбы со змеями это отлов и химическая защита.</p>
                             <p class="one_card__link">Узнать больше...</p>
                         </div>
                     </a>
@@ -312,7 +312,7 @@
                                 </i>
                             </div>
                             <h3 class="one_card__title title_shadow">фумигация</h3>
-                            <p class="one_card__content">Имеют сильно сплющенное сегментированное тельце. Его форма варьируется от округлой до веретенообразной</p>
+                            <p class="one_card__content">Обработка деревянных строений от всех видов вредителей (взрослых особей и личинок)</p>
                             <p class="one_card__link">Узнать больше...</p>
                         </div>
                     </a>
@@ -503,64 +503,74 @@
                                 <p href="" class="footer_title">Услуги</p>
                             </li>
                             <li>
-                                <a href="" class="footer_content">Дезинсекция</a>
+                                <a href="dezincekciya.html" class="footer_content">Дезинсекция</a>
                             </li>
                             <li>
-                                <a href="" class="footer_content">Комары</a>
+                                <a href="dezincekciya/komary.html" class="footer_content">Комары</a>
                             </li>
                             <li>
-                                <a href="" class="footer_content">Клещи</a>
+                                <a href="dezincekciya/kleshhi.html" class="footer_content">Клещи</a>
                             </li>
                             <li>
-                                <a href="" class="footer_content">Осы, шершни</a>
+                                <a href="dezincekciya/osi.html" class="footer_content">Осы, шершни</a>
+                            </li>
                             <li>
-                                <a href="" class="footer_content">Тараканы</a>
+                                <a href="dezincekciya/tarakan.html" class="footer_content">Тараканы</a>
+                            </li>
                             <li>
-                                <a href="" class="footer_content">Клопы</a>
+                                <a href="dezincekciya/clop.html" class="footer_content">Клопы</a>
+                            </li>
                             <li>
-                                <a href="" class="footer_content">Блохи</a>
+                                <a href="dezincekciya/bloh.html" class="footer_content">Блохи</a>
                             </li>
                             <br>
                             <li>
-                                <a href="" class="footer_content">Дератизация</a>
+                                <a href="deratizaciya.html" class="footer_content">Дератизация</a>
+                            </li>
                             <li>
-                                <a href="" class="footer_content">Мыши, крысы</a>
+                                <a href="deratizaciya/maus.html" class="footer_content">Мыши, крысы</a>
+                            </li>
                             <li>
-                                <a href="" class="footer_content">Кроты</a>
+                                <a href="deratizaciya/krot.html" class="footer_content">Кроты</a>
+                            </li>
                             <br>
                             <li>
-                                <a href="" class="footer_content">Десерпентация</a>
+                                <a href="deserpentaciya.html" class="footer_content">Десерпентация</a>
+                            </li>
                             <li>
-                                <a href="" class="footer_content">Змеи</a>
+                                <a href="deserpentaciya.html" class="footer_content">Змеи</a>
+                            </li>
                             <br>
                         </ul>
                     </div>
                     <div class="col-lg-2 text-left footer">
                         <ul>
                             <li>
-                                <a href="" class="footer_content">Дезинфекция</a>
+                                <a href="desinphekciya.html" class="footer_content">Дезинфекция</a>
+                            </li>
                             <li>
-                                <a href="" class="footer_content">Плесень</a>
+                                <a href="desinphekciya/plesen.html" class="footer_content">Плесень</a>
+                            </li>
                             <li>
-                                <a href="" class="footer_content">Вирусы</a>
-                            <li>
-                                <a href="" class="footer_content">Дезодорация</a>
-                            <li>
-                                <a href="" class="footer_content">Дезинвация</a>
+                                <a href="desinphekciya/virus.html" class="footer_content">Вирусы</a>
                             </li>
                             <br>
                             <li>
-                                <a href="" class="footer_content">Фумигация</a>
+                                <a href="phymigaciya.html" class="footer_content">Фумигация</a>
+                            </li>
                             <li>
-                                <a href="" class="footer_content">Кароед, шашель</a>
+                                <a href="phymigaciya/wood_home.html" class="footer_content">Кароед, шашель</a>
+                            </li>
                             <li>
-                                <a href="" class="footer_content">Обеззараживание зерна</a>
+                                <a href="phymigaciya/sklad.html" class="footer_content">Обеззараживание зерна</a>
                             </li>
                             <br>
                             <li>
-                                <a href="" class="footer_content">Для организаций</a>
+                                <a href="for_organization.html" class="footer_content">Для организаций</a>
+                            </li>
                             <li>
-                                <a href="" class="footer_content">Контакты</a>
+                                <a href="contacts.html" class="footer_content">Контакты</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="col-lg-3 text-left footer">
@@ -569,22 +579,22 @@
                                 <p class="footer_title">Полезные статьи</p>
                             </li>
                             <li>
-                                <a class="footer_content">Первая помощь детям при укусах насекомых</a>
+                                <a href="question-answer.html" class="footer_content">Первая помощь детям при укусах насекомых</a>
                             </li>
                             <li>
-                                <a class="footer_content">Первая помощь при укусе гадюки</a>
+                                <a href="question-answer.html" class="footer_content">Первая помощь при укусе гадюки</a>
                             </li>
                             <li>
-                                <a class="footer_content">От соседей ползут тараканы - что делать?</a>
+                                <a href="question-answer.html" class="footer_content">От соседей ползут тараканы - что делать?</a>
                             </li>
                             <li>
-                                <a class="footer_content">В подъезде появились крысы - что предпринять?</a>
+                                <a href="question-answer.html" class="footer_content">В подъезде появились крысы - что предпринять?</a>
                             </li>
                             <li>
-                                <a class="footer_content">Договор на дератизацию и дезинсекцию ― условие успешного прохождения проверок</a>
+                                <a href="question-answer.html" class="footer_content">Договор на дератизацию и дезинсекцию ― условие успешного прохождения проверок</a>
                             </li>
                             <li>
-                                <a class="footer_content">Жужжат и кусают: как избавиться от ос на даче?</a>
+                                <a href="question-answer.html" class="footer_content">Жужжат и кусают: как избавиться от ос на даче?</a>
                             </li>
                         </ul>
                     </div>
