--- a/deserpentaciya.html
+++ b/deserpentaciya.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="SHORTCUT ICON" href="img/dezodoracija.png" type="image/x-icon">
+    <link rel="SHORTCUT ICON" href="img/змеи.png" type="image/x-icon">
 
     <title>Дезинфекция</title>
 
@@ -326,7 +326,14 @@
     <!-- Форма отправки имя/телефона/почты -->
     <!-- НАЧАЛО -->
     <div class="container content-on-main-page">
-        <h3><strong><span></span>ОСТАВЬТЕ ЗАЯВКУ И ПОЛУЧИТЕ СКИДКУ НА АКАРИЦИДНУЮ ОБРАБОТКУ ТЕРРИТОРИИ ОТ КЛЕЩЕЙ</strong></h3>
+        <center>
+            <h4>
+                <strong>
+                    <span></span>
+                    ОСТАВЬТЕ ЗАЯВКУ И ПОЛУЧИТЕ СКИДКУ НА АКАРИЦИДНУЮ ОБРАБОТКУ ТЕРРИТОРИИ ОТ КЛЕЩЕЙ
+                </strong>
+            </h4>
+        </center>
         <br><br>
     </div>
     <div id="send_form" class="container-fluid pb-2">
