--- a/for_country_home.html
+++ b/for_country_home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="SHORTCUT ICON" href="img/dezodoracija.png" type="image/x-icon">
+    <link rel="SHORTCUT ICON" href="img/змеи.png" type="image/x-icon">
 
     <title>Загородный дом</title>
 
@@ -238,7 +238,7 @@
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
-                                    <img src="img/змеи.jpg" style="position: relative; z-index: 2;" alt=""> 
+                                    <img src="img/змеи.png" style="position: relative; z-index: 2;" alt=""> 
                                 </i>
                             </div>
                             <h3 class="one_card__title title_shadow">Змеи</h3>
