--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="SHORTCUT ICON" href="img/dezodoracija.png" type="image/x-icon">
+    <link rel="SHORTCUT ICON" href="img/змеи.png" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
 
@@ -132,23 +132,26 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/IMG_2487.jpeg" class="d-block carousel_img w-100" alt="...">
-                    <!-- <div class="carousel-caption d-none d-md-block">
+                    <div class="first_photo_on_carusel"></div>
+                    <!-- <img src="img/Первое_фото_на_карусель.jpg" class="d-block carousel_img w-100" alt="..."> -->
+                    <div class="carousel-caption d-none d-md-block">
                         <h5>ПОЛНОЕ ИЗБАВЛЕНИЕ ОТ ВРЕДИТЕЛЕЙ!</h5>
                         <p>Быстро. Качественно. Надежно.</p>
-                    </div> -->
+                    </div> 
                 </div>    
                 <div class="carousel-item">
-                    <img src="img/IMG_2497.jpeg" class="d-block carousel_img w-100" alt="...">
-                    <!-- <div class="carousel-caption d-none d-md-block">
+                    <div class="second_photo_on_carusel"></div>
+                    <!-- <img src="img/Второе_фото_на_карусель.jpg" class="d-block carousel_img w-100" alt="..."> -->
+                    <div class="carousel-caption d-none d-md-block">
                         <h5>Заботимся о Вашей безопасности</h5>
-                    </div> -->
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/IMG_2486.jpeg" class="d-block carousel_img w-100" alt="...">
-                    <!-- <div class="carousel-caption d-none d-md-block">
+                    <div class="third_photo_on_carusel"></div>
+                    <!-- <img src="img/Третье_фото_на_карусель.jpg" class="d-block carousel_img w-100" alt="..."> -->
+                    <div class="carousel-caption d-none d-md-block">
                         <h5>Гарантируем результат!</h5>
-                    </div> -->
+                    </div>
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide="prev">
@@ -196,7 +199,7 @@
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
-                                    <img src="img/змеи.jpg" style="position: relative; z-index: 2;" alt=""> 
+                                    <img src="img/змеи.png" style="position: relative; z-index: 2;" alt=""> 
                                 </i>
                             </div>
                             <h3 class="one_card__title title_shadow">Змеи</h3>
@@ -360,7 +363,7 @@
                                 </i>
                             </div>
                             <h3 class="one_card__title title_shadow">Дезинфекция</h3>
-                            <p class="one_card__content">Полное уничтожение плесени и грибка в помещении. 100% гарантия</p>
+                            <p class="one_card__content">Полное уничтожение вирусов, плесени и грибка в помещении. 100% гарантия</p>
                             <p class="one_card__link">Узнать больше...</p>
                         </div>
                     </a>
