--- a/for_organization.html
+++ b/for_organization.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="SHORTCUT ICON" href="img/dezodoracija.png" type="image/x-icon">
+    <link rel="SHORTCUT ICON" href="img/змеи.png" type="image/x-icon">
 
     <title>Для организаций</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -292,7 +292,7 @@
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
-                                    <img src="img/змеи.jpg" alt=""> 
+                                    <img src="img/змеи.png" alt=""> 
                                 </i>
                             </div>
                             <h3 class="one_card__title title_shadow">десерпентация</h3>
