--- a/phymigaciya.html
+++ b/phymigaciya.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="SHORTCUT ICON" href="img/dezodoracija.png" type="image/x-icon">
+    <link rel="SHORTCUT ICON" href="img/змеи.png" type="image/x-icon">
 
     <title>Фумигация</title>
 
