--- a/dezincekciya/muraviyi.html
+++ b/dezincekciya/muraviyi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="SHORTCUT ICON" href="../img/dezodoracija.png" type="image/x-icon">
+    <link rel="SHORTCUT ICON" href="../img/змеи.png" type="image/x-icon">
 
     <title>Муравьи</title>
 
@@ -36,11 +36,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-md-10 col-sm-12 top_black_block text-center">
-                    <a href="our_services.html" class="top_menu_link">Наши услуги</a>
-                    <a href="about_us.html" class="top_menu_link">О нас</a>
-                    <a href="comments.html" class="top_menu_link">Отзывы</a>
-                    <a href="methods_work.html" class="top_menu_link">Методы работы</a>
-                    <a href="question-answer.html" class="top_menu_link">Вопрос-ответ</a>
+                    <a href="../our_services.html" class="top_menu_link">Наши услуги</a>
+                    <a href="../about_us.html" class="top_menu_link">О нас</a>
+                    <a href="../comments.html" class="top_menu_link">Отзывы</a>
+                    <a href="../methods_work.html" class="top_menu_link">Методы работы</a>
+                    <a href="../question-answer.html" class="top_menu_link">Вопрос-ответ</a>
                 </div>
                 <div class="col-lg-4 top_black_block text-center">
                     <a href="tel:+380503559950" class="top_menu_link_to">&#128379;</a><span>+380503559950</span>
@@ -410,64 +410,74 @@
                                 <p href="" class="footer_title">Услуги</p>
                             </li>
                             <li>
-                                <a href="" class="footer_content">Дезинсекция</a>
+                                <a href="../dezincekciya.html" class="footer_content">Дезинсекция</a>
                             </li>
                             <li>
-                                <a href="" class="footer_content">Комары</a>
+                                <a href="../dezincekciya/komary.html" class="footer_content">Комары</a>
                             </li>
                             <li>
-                                <a href="" class="footer_content">Клещи</a>
+                                <a href="../dezincekciya/kleshhi.html" class="footer_content">Клещи</a>
                             </li>
                             <li>
-                                <a href="" class="footer_content">Осы, шершни</a>
+                                <a href="../dezincekciya/osi.html" class="footer_content">Осы, шершни</a>
+                            </li>
                             <li>
-                                <a href="" class="footer_content">Тараканы</a>
+                                <a href="../dezincekciya/tarakan.html" class="footer_content">Тараканы</a>
+                            </li>
                             <li>
-                                <a href="" class="footer_content">Клопы</a>
+                                <a href="../dezincekciya/clop.html" class="footer_content">Клопы</a>
+                            </li>
                             <li>
-                                <a href="" class="footer_content">Блохи</a>
+                                <a href="../dezincekciya/bloh.html" class="footer_content">Блохи</a>
                             </li>
                             <br>
                             <li>
-                                <a href="" class="footer_content">Дератизация</a>
+                                <a href="../deratizaciya.html" class="footer_content">Дератизация</a>
+                            </li>
                             <li>
-                                <a href="" class="footer_content">Мыши, крысы</a>
+                                <a href="../deratizaciya/maus.html" class="footer_content">Мыши, крысы</a>
+                            </li>
                             <li>
-                                <a href="" class="footer_content">Кроты</a>
+                                <a href="../deratizaciya/krot.html" class="footer_content">Кроты</a>
+                            </li>
                             <br>
                             <li>
-                                <a href="" class="footer_content">Десерпентация</a>
+                                <a href="../deserpentaciya.html" class="footer_content">Десерпентация</a>
+                            </li>
                             <li>
-                                <a href="" class="footer_content">Змеи</a>
+                                <a href="../deserpentaciya.html" class="footer_content">Змеи</a>
+                            </li>
                             <br>
                         </ul>
                     </div>
                     <div class="col-lg-2 text-left footer">
                         <ul>
                             <li>
-                                <a href="" class="footer_content">Дезинфекция</a>
+                                <a href="../desinphekciya.html" class="footer_content">Дезинфекция</a>
+                            </li>
                             <li>
-                                <a href="" class="footer_content">Плесень</a>
+                                <a href="../desinphekciya/plesen.html" class="footer_content">Плесень</a>
+                            </li>
                             <li>
-                                <a href="" class="footer_content">Вирусы</a>
-                            <li>
-                                <a href="" class="footer_content">Дезодорация</a>
-                            <li>
-                                <a href="" class="footer_content">Дезинвация</a>
+                                <a href="../desinphekciya/virus.html" class="footer_content">Вирусы</a>
                             </li>
                             <br>
                             <li>
-                                <a href="" class="footer_content">Фумигация</a>
+                                <a href="../phymigaciya.html" class="footer_content">Фумигация</a>
+                            </li>
                             <li>
-                                <a href="" class="footer_content">Кароед, шашель</a>
+                                <a href="../phymigaciya/wood_home.html" class="footer_content">Кароед, шашель</a>
+                            </li>
                             <li>
-                                <a href="" class="footer_content">Обеззараживание зерна</a>
+                                <a href="../phymigaciya/sklad.html" class="footer_content">Обеззараживание зерна</a>
                             </li>
                             <br>
                             <li>
-                                <a href="" class="footer_content">Для организаций</a>
+                                <a href="../for_organization.html" class="footer_content">Для организаций</a>
+                            </li>
                             <li>
-                                <a href="" class="footer_content">Контакты</a>
+                                <a href="../contacts.html" class="footer_content">Контакты</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="col-lg-3 text-left footer">
@@ -476,22 +486,22 @@
                                 <p class="footer_title">Полезные статьи</p>
                             </li>
                             <li>
-                                <a class="footer_content">Первая помощь детям при укусах насекомых</a>
+                                <a href="../question-answer.html" class="footer_content">Первая помощь детям при укусах насекомых</a>
                             </li>
                             <li>
-                                <a class="footer_content">Первая помощь при укусе гадюки</a>
+                                <a href="../question-answer.html" class="footer_content">Первая помощь при укусе гадюки</a>
                             </li>
                             <li>
-                                <a class="footer_content">От соседей ползут тараканы - что делать?</a>
+                                <a href="../question-answer.html" class="footer_content">От соседей ползут тараканы - что делать?</a>
                             </li>
                             <li>
-                                <a class="footer_content">В подъезде появились крысы - что предпринять?</a>
+                                <a href="../question-answer.html" class="footer_content">В подъезде появились крысы - что предпринять?</a>
                             </li>
                             <li>
-                                <a class="footer_content">Договор на дератизацию и дезинсекцию ― условие успешного прохождения проверок</a>
+                                <a href="../question-answer.html" class="footer_content">Договор на дератизацию и дезинсекцию ― условие успешного прохождения проверок</a>
                             </li>
                             <li>
-                                <a class="footer_content">Жужжат и кусают: как избавиться от ос на даче?</a>
+                                <a href="question-answer.html" class="footer_content">Жужжат и кусают: как избавиться от ос на даче?</a>
                             </li>
                         </ul>
                     </div>
