--- a/our_services.html
+++ b/our_services.html
@@ -95,6 +95,7 @@
                                 <a class="dropbtn5 nav-link dropdown-toggle nav-link-text" href="deserpentaciya.html">Десерпентация</a>
                                 <div class="dropdown-content5">
                                     <a class="dropdown-item" href="deserpentaciya/zmeeloff.html">ZmeelOFF</a>
+                                    <a class="dropdown-item" href="deserpentaciya.html">Отлов и защита от змей</a>
                                 </div>
                             </div>
                             <div class="dropdown4">
@@ -190,7 +191,7 @@
                 </div>
                 <div class="col-md-4 col-sm-6 text-center m-auto">
                     <div class="one_card">
-                        <a href="for_office.html">
+                        <a href="for_organization.html">
                             <div class="one_card__infa">
                                 <div class="one_card__icon">
                                     <i class="fa"> 
