--- a/desinphekciya.html
+++ b/desinphekciya.html
@@ -97,6 +97,7 @@
                                 <a class="dropbtn5 nav-link dropdown-toggle nav-link-text" href="deserpentaciya.html">Десерпентация</a>
                                 <div class="dropdown-content5">
                                     <a class="dropdown-item" href="deserpentaciya/zmeeloff.html">ZmeelOFF</a>
+                                    <a class="dropdown-item" href="deserpentaciya.html">Отлов и защита от змей</a>
                                 </div>
                             </div>
                             <div class="dropdown4">
