--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                                 <a class="dropbtn5 nav-link dropdown-toggle nav-link-text" href="deserpentaciya.html">Десерпентация</a>
                                 <div class="dropdown-content5">
                                     <a class="dropdown-item" href="deserpentaciya/zmeeloff.html">ZmeelOFF</a>
+                                    <a class="dropdown-item" href="deserpentaciya.html">Отлов и защита от змей</a>
                                 </div>
                             </div>
                             <div class="dropdown4">
@@ -135,22 +136,22 @@
                     <div class="first_photo_on_carusel"></div>
                     <!-- <img src="img/Первое_фото_на_карусель.jpg" class="d-block carousel_img w-100" alt="..."> -->
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>ПОЛНОЕ ИЗБАВЛЕНИЕ ОТ ВРЕДИТЕЛЕЙ!</h5>
+                        <h1>ПОЛНОЕ ИЗБАВЛЕНИЕ ОТ ВРЕДИТЕЛЕЙ!</h1>
                         <p>Быстро. Качественно. Надежно.</p>
-                    </div> 
+                    </div>
                 </div>    
                 <div class="carousel-item">
                     <div class="second_photo_on_carusel"></div>
                     <!-- <img src="img/Второе_фото_на_карусель.jpg" class="d-block carousel_img w-100" alt="..."> -->
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Заботимся о Вашей безопасности</h5>
+                        <h1>ЗАБОТИМСЯ О ВАШЕЙ БЕЗОПАСТНОСТИ!</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="third_photo_on_carusel"></div>
                     <!-- <img src="img/Третье_фото_на_карусель.jpg" class="d-block carousel_img w-100" alt="..."> -->
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Гарантируем результат!</h5>
+                        <h1>ГАРАНТИРУЕМ РЕЗУЛЬТАТ!</h1>
                     </div>
                 </div>
             </div>
