--- a/deratizaciya/krot.html
+++ b/deratizaciya/krot.html
@@ -277,17 +277,17 @@
             <p class="text_on_page_krot__text">Живут кроты большими семействами. Заметили одного гостя? Ждите в скором времени новых. Если вредители завелись весной, то принимать меры по выселению стоит поскорее — в это время поголовье кротов как раз увеличивается.</p>
             <p class="text_on_page_krot__main_text">Сколько раз нужно обрабатывать участок? </p>
             <p class="text_on_page_krot__text">Не стоит доверять компаниям, которые обещают избавить вас от кротов за один раз. В таком случае кроты вернутся, т.к. одного выезда в любом случае будет недостаточно. Наши специалисты для начала осмотрят участок и только потом смогут сориентировать вас по количеству обработок. Оно будет зависеть: </p>
-            <ol class="first_block__list_with_text">
-                <li>
-                    <span class="first_block__icon">&#10003;</span><span class="first_block__text">от размера участка</span>
+            <ul class="text_on_page_krot__ul">
+                <li class="text_on_page_krot__li">
+                    <p class="text_on_page_krot__li_text">От размера участка</p>
                 </li>
-                <li>
-                    <span class="first_block__icon">&#10003;</span><span class="first_block__text">от предположительного количества кротов</span>
+                <li class="text_on_page_krot__li">
+                    <p class="text_on_page_krot__li_text">От предположительного количества кротов</p>
                 </li>
-                <li>
-                    <span class="first_block__icon">&#10003;</span><span class="first_block__text">от типа кротовьих ходов</span>
+                <li class="text_on_page_krot__li">
+                    <p class="text_on_page_krot__li_text">От типа кротовьих ходов</p>
                 </li>
-            </ol>
+            </ul>
             <p class="text_on_page_krot__text">Для примера, участок в 19 соток может потребовать до 3 выездов. </p>
             <blockquote>Обработку ни в коем случае нельзя прерывать, т.к. кроты весьма активно размножаются. Если вы пропустите одну обработку, возможно придется увеличивать их количество. </blockquote>
             <div class="hr"></div>
@@ -296,17 +296,17 @@
             <div class="hr"></div>
             <p class="text_on_page_krot__main_text">Почему самостоятельная обработка участка от кротов не работает? </p>
             <div class="hr"></div>
-            <ol class="first_block__list_with_text">
-                <li>
-                    <span class="first_block__icon">&#10003;</span><span class="first_block__text"><strong>Отсутствие теоретических знаний.</strong> Выбирая средство, важно изучить основные сведения о жизнедеятельности грызунов, особенностях питания и передвижения. Не имея такой информации невозможно выстроить действующую систему по уничтожению кротов. </span>
+            <ul class="text_on_page_krot__ul">
+                <li class="text_on_page_krot__li">
+                    <p class="text_on_page_krot__li_text"> <strong> Отсутствие теоретических знаний. </strong>Выбирая средство, важно изучить основные сведения о жизнедеятельности грызунов, особенностях питания и передвижения. Не имея такой информации невозможно выстроить действующую систему по уничтожению кротов.</p>
                 </li>
-                <li>
-                    <span class="first_block__icon">&#10003;</span><span class="first_block__text"><strong>Бездумный выбор разрекламированных средств. </strong>Ассортимент товаров по борьбе с вредителями разрастается: появляются новые звуковые ловушки, средства воздействующие на обоняние. Около половины таких товаров бесполезны, но имеют высокую стоимость. Чтобы найти действенное, приходится проводить испытания на своем участке. Времени, потраченного на поиск подходящего средства, достаточно, чтобы семейство вредителей увеличилось в размерах. </span>
+                <li class="text_on_page_krot__li">
+                    <p class="text_on_page_krot__li_text"> <strong> Бездумный выбор разрекламированных средств. </strong>Ассортимент товаров по борьбе с вредителями разрастается: появляются новые звуковые ловушки, средства воздействующие на обоняние. Около половины таких товаров бесполезны, но имеют высокую стоимость. Чтобы найти действенное, приходится проводить испытания на своем участке. Времени, потраченного на поиск подходящего средства, достаточно, чтобы семейство вредителей увеличилось в размерах.</p>
                 </li>
-                <li>
-                    <span class="first_block__icon">&#10003;</span><span class="first_block__text"><strong>Самостоятельное использование ядов.</strong> Самым простым методом обработки участка от кротов считается использование химикатов. Метод таит множество опасностей. Рассчитать дозу яда способен только специалист, хозяин участка при самостоятельном распылении яда может пострадать. Ко всему прочему, очень сложно найти действительно эффективные средства в открытой продаже — как раз-таки потому что они предназначены для использования квалифицированными специалистами.</span>
+                <li class="text_on_page_krot__li">
+                    <p class="text_on_page_krot__li_text"> <strong> Самостоятельное использование ядов. </strong>Самым простым методом обработки участка от кротов считается использование химикатов. Метод таит множество опасностей. Рассчитать дозу яда способен только специалист, хозяин участка при самостоятельном распылении яда может пострадать. Ко всему прочему, очень сложно найти действительно эффективные средства в открытой продаже — как раз-таки потому что они предназначены для использования квалифицированными специалистами.</p>
                 </li>
-            </ol>
+            </ul>
             <p class="text_on_page_krot__text">Результатом самостоятельных экспериментов может стать не только увеличение семейства кротов, но и серьёзный вред здоровью людей и домашних животных.</p>
             <div class="hr"></div>
             <p class="text_on_page_krot__main_text">С нами не только надежно, но и удобно</p>
