--- a/webspeech/index.html
+++ b/webspeech/index.html
@@ -7,15 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebSpeech</title>
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
+
+        button {
+            cursor: pointer;
+        }
+
         body {
             background-color: rgb(35, 37, 37);
+            padding-bottom: 50px;
         }
-        .wrapper{
+
+        .wrapper {
             height: 100vh;
             display: flex;
             align-items: center;
@@ -25,26 +32,46 @@
             flex-direction: column;
             color: rgb(230, 230, 230);
         }
+
         .wrapper h1 {
             text-align: center;
             font-size: 36px;
             width: 100%;
             display: block;
             align-items: center;
-            margin-top: 100px;
+            margin-top: 70px;
         }
-        .wrapper p{
+
+        .wrapper p {
             margin-top: 20px;
             text-align: center;
             margin-bottom: 40px;
             font-size: 18px;
         }
-        .container{
+
+        .turn_buttons {
+            display: flex;
+            padding: 0px 50px;
+            justify-content: space-between;
+            margin-bottom: 10px;
+        }
+
+        .turn_buttons button {
+            display: block;
+            border-radius: 15px;
+            border-color: transparent;
+            padding: 10px 20px;
+            margin: 10px;
+
+        }
+
+        .container {
             max-width: 600px;
             width: 90%;
             margin: 0 auto;
         }
-        .texts p{
+
+        .texts p {
             text-align: left;
             padding: 15px 7px;
             color: #000;
@@ -57,35 +84,105 @@
             font-weight: 600;
             letter-spacing: .7px;
         }
-        .rules{
+
+        .rules {
             max-width: 500px;
             margin: 30px auto;
+            padding-bottom: 50px;
         }
-        .rules_item{
-            border: 1px solid #b91125
+
+        .rules_item {
+            border: 1px solid #b91125;
+            position: relative;
         }
-        .rules_title{
+
+        .rules_title {
             display: block;
             color: #fff;
             cursor: pointer;
             padding: 10px 15px;
             transition: all 0.2s ease;
         }
-        .rules_title:hover{
+
+        .rules_title:hover {
             background-color: #b91125;
         }
-        .rules_input{
+
+        .rules_input {
             appearance: none;
             position: absolute;
             width: 0;
             height: 0;
         }
-        .rules_text{
+
+        .rules_text {
             display: none;
             color: #fff
         }
-        .rules_input:checked + .rules_text{
+
+        .rules_input:checked+.rules_text {
             display: block;
+        }
+
+        #test,
+        #result {
+            width: 500px;
+            border-radius: 10px;
+            border-color: transparent;
+            outline: transparent;
+            height: 50px;
+            padding: 10px;
+        }
+
+        .texts .res {
+            display: inline-block;
+            background-color: transparent;
+            padding: 0;
+            margin: 0;
+            margin-top: 20px;
+            color: white;
+        }
+
+        .texts button {
+            display: block;
+            margin: auto;
+            border-radius: 10px;
+            border-color: transparent;
+            margin-top: 15px;
+            font-size: 20px;
+            font-weight: 500;
+            padding: 15px;
+        }
+
+        .accordion {
+            background-color: #eee;
+            color: #444;
+            cursor: pointer;
+            padding: 18px;
+            width: 100%;
+            text-align: left;
+            border: none;
+            outline: none;
+            transition: 0.4s;
+            margin-top: 20px;
+        }
+
+        .active,
+        .accordion:hover {
+            background-color: #ccc;
+        }
+
+        .panel {
+            padding: 0 18px;
+            background-color: white;
+            width: 100%;
+            color: black;
+            display: none;
+            /*overflow: hidden; */
+        }
+
+        .panel p {
+            margin: 10px auto;
         }
     </style>
 </head>
@@ -94,30 +191,60 @@
     <div class="wrapper">
         <h1>Голосовий математичний калькулятор</h1>
         <p>Переконайтеся, що у вас дозволено використання мікрофону</p>
-        <p>Оберіть мову: <select name="" id="">
-            <option value="ru-RU">Русский</option>
-            <option value="uk-UA">Українська</option>
-            <option value="en-US">English</option>
-        </select></p>
+        <p>Оберіть мову: 
+            <select name="" id="">
+                <option value="uk-UA">Українська</option>
+                <option value="ru-RU">Русский</option>
+                <option value="en-US">English</option>
+            </select>
+        </p>
+        <div class="turn_buttons">
+            <button onclick="turn_on()" class="turn_on_button">Включити мікрофон</button>
+            <button onclick="turn_off()" class="turn_off_button">Виключити мікрофон</button>
+        </div>
+
         <div class="container">
             <div class="texts">
-                <input id="test"></input>
+                <input id="test" placeholder="Скажіть або уведіть приклад"></input>
                 <button onclick="test()">Підрахувати</button>
+                <p class="res">Значення виразу: </p>
                 <p id="result"></p>
             </div>
         </div>
-        <div class="rules">
-            <div class="rules_item">
-                <lable class="rules_title" for="rules_1">Правила, які необхідно знати для роботи з цим калькулятором</lable>
-                <input class="rules_input" type="radio" name="rules" id="rules_1">
-                <div class="rules_text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At autem reiciendis voluptatem sed labore eveniet dolore modi, quasi suscipit molestias animi fugiat rem quia magnam assumenda accusamus hic ut quae ex. Veritatis suscipit odit deleniti recusandae, distinctio officia? Veritatis, nostrum, ipsam ullam quos quis assumenda, quam dolores tempora et blanditiis culpa. Ipsum, libero! Corrupti recusandae blanditiis eveniet earum numquam molestias aliquid suscipit magnam, impedit repellat iusto ipsum incidunt eos voluptatum voluptates, est dolore quidem nesciunt mollitia autem nihil consequatur! Illo, voluptatibus ullam ab nobis itaque distinctio rerum facilis totam! Laborum debitis eaque libero sequi tempore ex magnam perferendis enim sapiente?</p>
-                </div>
-            </div>
+
+        <button class="accordion">Історія обчислення прикладів</button>
+        <div class="panel" id="storage">
+            <p id="history">Історія порожня...</p>
         </div>
+
+        <button class="accordion">Правила, дотримання яких - обов'язкове</button>
+        <div class="panel">
+            <p>Lorem ipsum...</p>
+        </div>
+
     </div>
 
     <script src="script.js"></script>
+    <script>
+        var acc = document.getElementsByClassName("accordion");
+        var i;
+
+        for (i = 0; i < acc.length; i++) {
+            acc[i].addEventListener("click", function () {
+                /* Toggle between adding and removing the "active" class,
+                to highlight the button that controls the panel */
+                this.classList.toggle("active");
+
+                /* Toggle between hiding and showing the active panel */
+                var panel = this.nextElementSibling;
+                if (panel.style.display === "block") {
+                    panel.style.display = "none";
+                } else {
+                    panel.style.display = "block";
+                }
+            });
+        }
+    </script>
 </body>
 
 </html>
